Небольшие правки в форматировании и парсинге для тг бота